# content-scanner

./: .gitignore  app.py  pyproject.toml
.github/workflows/: code-ql.yml
scanner/: app.py
scanner/src/: context.py  extension_helper.py  message_helper.py  report_service.py  search_service.py  thread_manager.py
scanner/src/constant/: fileType.py  general.py
scanner/src/context_manager/: log_error.py  progress_bar_context_manager.py
scanner/src/engine/: search_dispatcher.py
scanner/src/engine/search_engine/: plain_text_file_search_engine.py
scanner/src/exception/: file_exception.py  search_engine_exception.py
scanner/src/model/: thread_data.py
scanner/src/utility/: lock.py
scanner/src/validator/console/: has_input_validator.py  path_validator.py  positive_number_validator.py
src/: context.py  extension_helper.py  message_helper.py  report_service.py  search_service.py  thread_manager.py
src/constant/: fileType.py  general.py
src/context_manager/: log_error.py  progress_bar_context_manager.py
src/engine/: search_dispatcher.py
src/engine/search_engine/: file_search_engine.py  plain_text_file_search_engine.py
src/exception/: app_exception.py  file_exception.py  search_engine_exception.py
src/model/: thread_data.py
src/utility/: lock.py
src/validator/console/: positive_number_validator.py
