[tool.poetry]
name = "content-scanner"
version = "0.1.0"
description = ""
authors = ["Alvin So <r.alvso@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
