[tool.poetry]
name = "scanner"
version = "0.1.2"
description = ""
authors = ["Alvin So <r.alvso@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
PyInquirer = "^1.0.3"
tomlkit = "^0.11.0"
pydantic = "^1.9.1"
tqdm = "^4.64.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
